--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="Web site created using create-snowpack-app" />
-    <link rel="stylesheet" type="text/css" href="/index.css" />
-    <script src="dist/index.js" type="module"></script>
-    <title>Simple TODO App</title>
-  </head>
-  <body>
-    <ul id="list"></ul>
-    <form id="new-task-form">
-      <input type="text" id="new-task-title">
-      <button type="submit">Add task</button>
-    </form>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="dist/index.js" type="module"></script>
+  <title>Document</title>
+  <style>
+    #list {
+      list-style: none;
+      padding: 0;
+    }
+  </style>
+</head>
+
+<body>
+  <ul id="list"></ul>
+  <form id="new-task-form">
+    <input type="text" id="new-task-title">
+    <button type="submit">Add</button>
+  </form>
+</body>
+
 </html>
